--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="./assets/Imagem.png" alt="foto do programador">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Prof. Alex</p>
+        <p>Desenvolvido por Prof. Alex - testando mudanças</p>
     </footer>
 </body>
 </html>
